feat: Agregando correcciones